docs/versions/4.21/groups/M4.md
---
layout: group
title: Audit Rules - SELinux
group_id: M4
version: "4.21"
severity: MEDIUM
status: pending
priority: 2
priority_label: High
jira:
pr:
compare: compliance/4.21/m4-audit-selinux
prev_group: M3
next_group: M5
---

## Overview

This remediation configures audit rules to monitor SELinux-related operations, ensuring all security context modifications are logged.

## Settings

| Rule | Description |
|------|-------------|
| `chcon` | Audit SELinux context changes |
| `restorecon` | Audit SELinux context restoration |
| `semanage` | Audit SELinux management commands |
| `setfiles` | Audit SELinux file labeling |
| `setsebool` | Audit SELinux boolean changes |
| `seunshare` | Audit SELinux unshare operations |

## Implementation

```yaml
apiVersion: machineconfiguration.openshift.io/v1
kind: MachineConfig
metadata:
  name: 75-audit-privilege-medium
  labels:
    machineconfiguration.openshift.io/role: master
spec:
  config:
    ignition:
      version: 3.2.0
    storage:
      files:
        - path: /etc/audit/rules.d/75-selinux-audit.rules
          mode: 0644
          overwrite: true
          contents:
            inline: |
              ## SELinux command monitoring
              -a always,exit -F path=/usr/bin/chcon -F perm=x -F auid>=1000 -F auid!=unset -k privileged-priv_change
              -a always,exit -F path=/usr/sbin/restorecon -F perm=x -F auid>=1000 -F auid!=unset -k privileged-priv_change
              -a always,exit -F path=/usr/sbin/semanage -F perm=x -F auid>=1000 -F auid!=unset -k privileged-priv_change
              -a always,exit -F path=/usr/sbin/setfiles -F perm=x -F auid>=1000 -F auid!=unset -k privileged-priv_change
              -a always,exit -F path=/usr/sbin/setsebool -F perm=x -F auid>=1000 -F auid!=unset -k privileged-priv_change
              -a always,exit -F path=/usr/sbin/seunshare -F perm=x -F auid>=1000 -F auid!=unset -k privileged-priv_change
```

## Compliance Checks Remediated

| Check | Profile | Docs |
|-------|---------|------|
| `rhcos4-e8-worker-audit-rules-execution-chcon` | E8 | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/auditing/auditd_configure_rules/audit_execution_selinux_commands) |
| `rhcos4-e8-worker-audit-rules-execution-restorecon` | E8 | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/auditing/auditd_configure_rules/audit_execution_selinux_commands) |
| `rhcos4-e8-worker-audit-rules-execution-semanage` | E8 | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/auditing/auditd_configure_rules/audit_execution_selinux_commands) |
| `rhcos4-e8-worker-audit-rules-execution-setfiles` | E8 | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/auditing/auditd_configure_rules/audit_execution_selinux_commands) |
| `rhcos4-e8-worker-audit-rules-execution-setsebool` | E8 | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/auditing/auditd_configure_rules/audit_execution_selinux_commands) |
| `rhcos4-e8-worker-audit-rules-execution-seunshare` | E8 | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/auditing/auditd_configure_rules/audit_execution_selinux_commands) |

<div class="source-files">
<h4>Source Remediation Files (6)</h4>
<ul>
<li>medium/rhcos4-e8-worker-audit-rules-execution-chcon.yaml</li>
<li>medium/rhcos4-e8-worker-audit-rules-execution-restorecon.yaml</li>
<li>medium/rhcos4-e8-worker-audit-rules-execution-semanage.yaml</li>
<li>medium/rhcos4-e8-worker-audit-rules-execution-setfiles.yaml</li>
<li>medium/rhcos4-e8-worker-audit-rules-execution-setsebool.yaml</li>
<li>medium/rhcos4-e8-worker-audit-rules-execution-seunshare.yaml</li>
</ul>
</div>

## Security Impact

Monitoring SELinux operations is critical because:
- SELinux provides mandatory access control enforcement
- Unauthorized changes could weaken security boundaries
- Audit trail helps detect policy bypass attempts
